# rain-desktop

./: .gitignore  LICENSE  README.md  SIGNING.md  package.json
.github/workflows/: build.yml
scripts/: make-placeholder-icon.mjs  rename-assets.mjs  set-default-url.mjs
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
