[package]
name = "rain-desktop"
version = "0.2.0"
description = "RAIN Desktop — a configurable native launcher for your store"
authors = ["MrZaKaRiA"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rain_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Small blocking HTTP client (rustls, no system OpenSSL) used only to fetch the
# store's public logo for the launcher header — kept off the remote site window.
ureq = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
